# async_runtime

./: .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cargo.yml  README.md  async_runtime.md  build.rs  ci.bash
examples/: async-file.rs  attribute.rs  handle.rs  juliex.rs  localpool.rs  threadpool.rs  tokio.rs
examples/wasm/: Cargo.toml  Cargo.yml  README.md  index.html
examples/wasm/src/: entrypoint.rs
macros/: Cargo.toml  Cargo.yml  README.md
macros/examples/: main.rs
macros/src/: lib.rs
src/: config.rs  error.rs  executor.rs  lib.rs  rt.rs  rt_config.rs  wasm_exec.rs  wasm_rt.rs
src/executor/: async_std.rs  bindgen.rs  juliex.rs  localpool.rs  threadpool.rs  tokio_ct.rs
src/rt/: async_std.rs  bindgen.rs  config.rs  exec03.rs  exec03_config.rs  executor.rs  juliex.rs  localpool.rs
src/wasm_rt/: wasm_exec.rs  wasm_exec_config.rs
tests/: async_std.rs  attributes.rs  bindgen.rs  error.rs  init.rs  juliex.rs  local.rs  rt.rs  threadpool.rs  tokio_ct.rs  wasm.rs  wasm_attributes.rs  wasm_default_config.rs  wasm_error.rs
tests/attributes/: Cargo.toml
tests/attributes/benches/: basic.rs
tests/attributes/src/: juliex.rs  local.rs  pool.rs
